Float footer contents to left and fix spacing

--- a/search.css
+++ b/search.css
@@ -37,6 +37,8 @@
     width: 100%;
     height: 50px;
     background-color: #F0F0F0;
+    padding: 10px;
+    line-height: 50px;
 }
 
 #footer ul {
